syntax = "proto3";

package edu.uci.ics.amber.engine.common;

import "edu/uci/ics/amber/engine/common/virtualidentity.proto";
import "google/protobuf/any.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false
  no_default_values_in_constructor: true
};

message ControlPayload{
  oneof value {
    ControlInvocation invocation = 1;
    ControlReturn return_value = 2;
  }
}

message ControlInvocation{
  string method_name = 1;
  bool enable_tracing = 2;
  int64 control_id = 3;
  google.protobuf.Any param = 4 [(scalapb.field).no_box = true];
}

message ControlReturn{
  int64 control_id = 1;
  bool enable_tracing = 2;
  google.protobuf.Any return_value = 3 [(scalapb.field).no_box = true];
}